Ficed broken links and img local path

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p>If you want to lose weight, gain muscle, or just feel better, stop worring about diet and exercise. Step back and take a look at the bigger picture. Over inspiration, a lack of true curiosity, and working off of bad assumptuions is what's made you overweight. Not your diet.</p>
           <div class="row">
             <div class="col-sm-6">
-              <img class="img-responsive hidden-xs" src="/img/science.jpeg">
+              <img class="img-responsive hidden-xs" src="img/science.jpeg">
             </div>
             <div class="col-sm-6">
             <h4>Help With Research</h4>
